--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -447,7 +447,7 @@ header.header
 									span РОСТЕХ
 						.col-12.col-md-2.d-table
 							.button-more-inn.header-button-inn.button-inn
-								.nav-more.btn-group
+								.nav-more.btn-group.dropup
 									button#header-navMore.button.header-button.button-more.button-more-lg-min.button-more-xl-full(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
 										| Ещё
 										i.icon-arrow-down
