--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -273,7 +273,7 @@ header.header
 
 							li.nav-more-list__item.menu-nav__item.menu-nav-header__item
 								.menu-nav__textbox.menu-nav-header__textbox
-									a.menu-nav__text.menu-nav-header__text(href="#")
+									a.menu-nav__text.menu-nav-header__text(href="#", data-toggle='collapse', data-target='#menu-nav-header-collapse-9', aria-expanded='false', aria-controls='menu-nav-header-collapse-9')
 										| Без ссылки на раздел
 									button.button-split(data-toggle='collapse', data-target='#menu-nav-header-collapse-9', aria-expanded='false', aria-controls='menu-nav-header-collapse-9')
 										i.icon-arrow-down
