--- a/app/sass/_header-scroll.scss
+++ b/app/sass/_header-scroll.scss
@@ -60,9 +60,9 @@
 			border: none;
 			a {
 				font-size: 12px;
-				@include md-block {
-					font-size: 10px;
-					line-height: 1.25;
+				@include lg-block {
+					font-size: 0;
+					//line-height: 1.25;
 				}
 
 			}
