--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -136,6 +136,11 @@
 			}
 			@include md-block {
 				max-width: 80px;
+				min-width: 40px;
+			}
+			@include xs-block {
+
+				padding-left: 0;
 			}
 		}
 		&__search {
@@ -238,35 +243,46 @@
 			padding: 0;
 			margin-right: -20px;
 			border: none;
+			a {
+				font-size: 0;
+				display: block;
+				width: 100%;
+				background: transparent url('../img/group2151@2x.png') center no-repeat;
+				height: 25px;
+				background-size: contain;
+			}
 		}
 		@include md-block {
 			margin-left: -15px;
 			margin-bottom: 0;
+
 		}
 		@include sm-block {
 			margin-left: 0;
 			margin-bottom: 0;
 			max-width: 60px;
-			font-size: 8px;
+			font-size: 0px;
+
+
 		}
 		a {
 			font-size: 13px;
 			line-height: 16px;
 			transition-property: color;
 			@include lg-block {
-				font-size: 12px;
+				//font-size: 12px;
 				br {
 					display: none;
 				}
 			}
-			@include md-block {
-				font-size: 10px;
-				line-height: 1.25;
-			}
-			@include sm-block {
-				font-size: 8px;
-				line-height: 1.4;
-			}
+			//@include md-block {
+			//	font-size: 10px;
+			//	line-height: 1.25;
+			//}
+			//@include sm-block {
+			//	font-size: 8px;
+			//	line-height: 1.4;
+			//}
 		}
 	}
 	&-info {
@@ -317,6 +333,9 @@
 		@include lg-block {
 			padding-top: 0;
 			margin-left: auto;
+		}
+		@include xs-block {
+			padding-left: 15px;
 		}
 		&__box {
 			margin-bottom: 5px;
