--- a/app/pug/profile.pug
+++ b/app/pug/profile.pug
@@ -112,7 +112,7 @@ block content
 				.content-titlebox
 					h2
 						| Дни рождения ваших друзей
-				.text-right.content-text_special.content-text_thin
+				.text-right.content-text_special.content-text_thin.d-none.d-sm-block
 					p Список друзей
 	.margin-bottom-15
 		.row
