--- a/app/pug/stylegide.pug
+++ b/app/pug/stylegide.pug
@@ -25,6 +25,7 @@ html(lang='ru')
 		.container
 			include stylegide/_stylegide__colors
 			include stylegide/_stylegide__fonts
+			include stylegide/_stylegide__indets
 			include stylegide/_stylegide__buttons
 			include stylegide/_stylegide__progress
 			include stylegide/_stylegide__forms
