--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -161,6 +161,9 @@
 				margin-bottom: 5px;
 				font-size: 11px;
 			}
+			@include xs-block {
+				font-size: 13px;
+			}
 			.small {
 				display: block;
 				font-size: 12px;
@@ -184,6 +187,10 @@
 			}
 			@include md-block {
 				font-size: 8px;
+			}
+			@include xs-block {
+				font-size: 10px;
+				margin-bottom: 10px;
 			}
 			.light {
 				color: #bcbdc0;
@@ -275,6 +282,9 @@
 			font-size: 8px;
 			line-height: 1.4;
 			vertical-align: top;
+		}
+		@include sm-block {
+			font-size: 12px;
 		}
 		// transition: color 0.4s ease-out;
 		.icon-comment {
