--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -18,6 +18,7 @@ html(lang='ru')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.min.css')
 		link(rel='stylesheet', href='slick/slick-theme.css')
 		link(rel='stylesheet', href='slick/slick.css')
+		link(rel='stylesheet', href='css/bootstrap-modal-ios.css')
 
 		link(href='css/style.css'+version, rel='stylesheet')
 		if pageTitle !== undefined
@@ -69,10 +70,12 @@ html(lang='ru')
 		// Валидация
 		script(src='js/libs/validate/jquery.validate.min.js')
 		script(src='js/libs/jquery.maskedinput.min.js')
+		script(src='js/libs/bootstrap-modal-ios.js')
 		// main script
 		script(src='js/main/main.js'+version)
 
 		+ie('if lte IE 9', '<link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" />')
 		+ie('if lte IE 9', '<link rel="stylesheet" href="ie9/css/style-ie9.css" />')
 		+ie('if lte IE 9', '<script src="ie9/js/bootstrap-ie9.js"></script>')
+		+ie('if lte IE 9', '<script src="ie9/js/main-ie9.js"></script>')
 		script(src='ie9/js/main-ie.js'+version)
