--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -515,6 +515,9 @@
 		}
 		&:nth-child(5n) {
 			padding-right: 0;
+			@include xs-block {
+				padding-right: 8px;
+			}
 		}
 
 		&__imgbox {
@@ -1015,14 +1018,22 @@
 				border-radius: 5px;
 				border: 1px solid #dddee0;
 				padding: 30px;
+				margin: 30px auto;
 				@include md-block {
 				    padding: 18px;
 				}
-			}
-			&-dialog {
-				@media (min-width: 1024px) {
+				@media (min-width: 1230px) {
+					max-width: 870px;
+				}
+				@media (min-width: 992px) {
 					max-width: 810px;
 				}
+				@media (min-width: 768px) {
+					max-width: 560px;
+				}
+			}
+			&-dialog {
+
 			}
 			&-header {
 				position: relative;
@@ -1037,10 +1048,12 @@
 					padding: 0;
 					margin: 0;
 					font-size: 14px;
-					color: #d0d1d3;
+					color: #A1A3A7;
 					@include md-block {
 						top: -10px;
 						right: -10px;
+						width: 20px;
+						height: 20px;
 					}
 				}
 			}
@@ -1258,6 +1271,9 @@
 		@include lg-block {
 			width: 210px;
 		}
+		@include md-block {
+			width: 165px;
+		}
 		@include sm-block {
 			width: 120px;
 		}
@@ -1266,6 +1282,12 @@
 		text-align: right;
 		.link-special {
 			margin-left: 15px;
+		}
+		.card-links__lnk_small {
+			margin-top: 8px;
+			@include md-block {
+				margin-top: 2px;
+			}
 		}
 	}
 	&__lnkbox {
@@ -1290,6 +1312,10 @@
 		font-weight: inherit;
 		transition: color 0.2s;
 		font-family: "PT Serif", serif;
+		vertical-align: top;
+		line-height: 1.4;
+		height: auto;
+		min-height: auto;
 		@include lg-block {
 			font-size: 12px;
 		}
