--- a/app/sass/_header-scroll.scss
+++ b/app/sass/_header-scroll.scss
@@ -59,7 +59,12 @@
 			margin-right: -20px;
 			border: none;
 			a {
-				font-size: 12px;
+				font-size: 0;
+				display: block;
+				width: 100%;
+				background: transparent url('../img/group2151@2x.png') center left no-repeat;
+				height: 25px;
+				background-size: contain;
 				@include lg-block {
 					font-size: 0;
 					//line-height: 1.25;
