--- a/app/sass/general/_modalMain.scss
+++ b/app/sass/general/_modalMain.scss
@@ -7,7 +7,8 @@
 		}
 	}
 	.modal {
-		&-dialog {
+		&-content {
+			margin: 60px auto;
 			@media (min-width: 1230px) {
 				max-width: 1200px;
 			}
@@ -17,6 +18,9 @@
 			@media (min-width: 768px) {
 				max-width: 560px;
 			}
+		}
+		&-dialog {
+			overflow-x: hidden;
 		}
 
 		&-content {
