--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -333,6 +333,8 @@ block vars
 														button.button.comment-form__button(type="submit") Отправить
 
 block content
+	.card.text-right.margin-top-md-15.margin-bottom-md-0
+		button.button.button-border.button-width-142 Дать объявление
 	+baseAds('Продается гараж 18 м2', '#tabModal1')
 	+contentAds('img/block-img-01.jpg', '#tabModal1')
 	+cardModal('img/block-img-01.jpg', 'tabModal1', 'Продается гараж 18 м2')
