--- a/app/pug/blocks/_block-min-imgl-text.pug
+++ b/app/pug/blocks/_block-min-imgl-text.pug
@@ -20,45 +20,39 @@
 					i.icon-like
 					span.like-count 1286
 .row
-	.col-xl-3
+	.col-md-3
 		.card
 			.card__imgbox.card__imgbox_xs(style='background-image: url(img/block-img-01.jpg);')
 				.card-warning-text.hide
 					p
-	.col-xl-9
+	.col-md-9
 		.card
-			.card__text.text-ddd-135
+			.card__text
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-				p
-					| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
-				a.button.card__more(href='#') Читать далее
 
 .row
-	.col-xl-3
+	.col-md-3
 		.card
 			.card__imgbox.card__imgbox_xs(style='background-image: url(img/block-img-09.jpg);')
 				.card-warning-text.hide
 					p
 
-	.col-xl-9
+	.col-md-9
 		.card
-			.card__text.text-ddd-135
+			.card__text
 				p
-					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-				p
-					| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
+					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став...
 				a.button.card__more(href='#') Читать далее
 
 .row
-	.col-xl-3
+	.col-md-3
 		.card
 			.card__imgbox.card__imgbox_xs(style='background-image: url(img/block-img-04.jpg);')
 				.card-warning-text.hide
 					p
-	.col-xl-9
+	.col-md-9
 		.card
-			.card__text.text-ddd-135
+			.card__text
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-				a.button.card__more(href='#') Читать далее
