--- a/app/pug/cards/_cards-half.pug
+++ b/app/pug/cards/_cards-half.pug
@@ -17,7 +17,7 @@
 								span.like-count 1286
 					.card__title.card-color-light
 						a(href='#')
-							| Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1
+							| Насосно-компрессорные трубы ТЭСЦ-1
 					.card-date.card-date_light
 						span 24 Сентября 2018
 	.col-sm-6
