--- a/app/pug/search-result.pug
+++ b/app/pug/search-result.pug
@@ -8,7 +8,7 @@ block vars
 				h3.margin-bottom-10
 					a(href="#") Серафимович, Александр Серафимович
 				a.link-search(href='') https://portal.omk.ru/news/omk_news...
-				p ... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много
+				p  ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...
 
 block content
 	.row
@@ -43,8 +43,6 @@ block content
 					.card-date.card-date_big.margin-bottom-10 11 Декабря 2018, 17:44
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
-					p
-						| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
 					a.button.card__more(href='#') Читать далее
 	+searchRes
 	+searchRes
