--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -30,13 +30,11 @@ block vars
 							p
 			.col-12.col-sm-9
 				.card
-					.card__text.card__text_mobile.text-ddd-135
+					.card__text.card__text_mobile
 						p <strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;
 							a.link-deafult(href="mailto:/contact@omk.ru") contact@omk.ru
 						p
-							| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-						p
-							| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
+							| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...
 						a.button.card__more(href= $modal, data-toggle='modal', data-target= $modal) Читать далее
 
 
