--- a/app/pug/blocks/_block-imgl-text.pug
+++ b/app/pug/blocks/_block-imgl-text.pug
@@ -9,30 +9,27 @@
 				.content-titlebox
 					h2 Новые технологии на ВМЗ в 2019
 .row
-	.col-xl-4
+	.col-md-4
 		.card
 			.card__imgbox.card__imgbox_sm(style='background-image: url(img/block-img-01.jpg);')
 				.card-warning-text.hide
 					p
-	.col-xl-8
+	.col-md-8
 		.card
-			.card__text.text-ddd-210
+			.card__text
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-				p
-					| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
-				a.button.card__more(href='#') Читать далее
 .row
-	.col-xl-4
+	.col-md-4
 		.card
 			.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-02.jpg);')
 				.card-warning-text.hide
 					p
-	.col-xl-8
+	.col-md-8
 		.card
-			.card__text.text-ddd-210
+			.card__text
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
 				p
-					| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
+					| Литейно-прокатный комплекс - уникальное для России...
 				a.button.card__more(href='#') Читать далее
