--- a/app/pug/blocks/_block-text-imgr.pug
+++ b/app/pug/blocks/_block-text-imgr.pug
@@ -9,29 +9,26 @@
         .content-titlebox
           h2 Новые технологии на ВМЗ в 2019
 .row
-  .col-xl-8
+  .col-md-8
     .card
       .card__text.text-ddd-210
         p
           | Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-        p
-          | Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
-        a.button.card__more(href='#') Читать далее
-  .col-xl-4
+  .col-md-4
     .card
       .card__imgbox.card__imgbox_sm(style='background-image: url(img/block-img-05.jpg);')
         .card-warning-text.hide
           p
 .row
-  .col-xl-8
+  .col-md-8
     .card
       .card__text.text-ddd-210
         p
-          | Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
+          | Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном...
         p
-          | Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
+          | Литейно-прокатный комплекс - уникальное для России предприятие, в котором ...
         a.button.card__more(href='#') Читать далее
-  .col-xl-4
+  .col-md-4
     .card
       .card__imgbox.card__imgbox_sm(style='background-image: url(img/block-img-06.jpg);')
         .card-warning-text.hide
