--- a/app/pug/cards/_cards-third.pug
+++ b/app/pug/cards/_cards-third.pug
@@ -17,7 +17,7 @@
 							span.like-count 1286
 				.card__title
 					a(href='#')
-						| Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
+						| Насосно-компрессорные трубы ТЭСЦ-1...
 				.card-date
 					span 24 Сентября 2018
 	.col-sm-4
