--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -31,8 +31,8 @@ block vars
 			.col-12.col-sm-9
 				.card
 					.card__text.card__text_mobile
-						p <strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;
-							a.link-deafult(href="mailto:/contact@omk.ru") contact@omk.ru
+						p <strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;
+							a.link-deafult(href="mailto:/contact@omk.ru") contactvaleryvasiley@omk.ru
 						p
 							| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...
 						a.button.card__more(href= $modal, data-toggle='modal', data-target= $modal) Читать далее
