add margin modal

--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -56,7 +56,7 @@ block vars
 						.card.margin-bottom-0
 							.row
 								.col-sm-3
-									.card__imgbox.card__imgbox_xs(style="background-image: url(" + imgUrl + ");")
+									.card__imgbox.card__imgbox_xs.margin-bottom-15(style="background-image: url(" + imgUrl + ");")
 										img(src=imgUrl alt="user-photo")
 								.col-sm-9
 									.card__text.margin-bottom-30
