--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -246,14 +246,6 @@
 			padding: 0;
 			margin-right: -20px;
 			border: none;
-			a {
-				font-size: 0;
-				display: block;
-				width: 100%;
-				background: transparent url('../img/group2151@2x.png') center no-repeat;
-				height: 25px;
-				background-size: contain;
-			}
 		}
 		@include md-block {
 			margin-left: -15px;
@@ -273,7 +265,17 @@
 			line-height: 16px;
 			transition-property: color;
 			@include lg-block {
-				//font-size: 12px;
+				max-width: 65px;
+				margin-left: auto;
+				margin-right: auto;
+				display: block;
+				//width: 100%;
+				height: 25px;
+				background: transparent url('../img/group2151@2x.png') center no-repeat;
+				background-size: contain;
+				border: 1px solid #DDDEE0;
+				border-radius: 5px;
+				font-size: 0;
 				br {
 					display: none;
 				}
