--- a/app/sass/_header-scroll.scss
+++ b/app/sass/_header-scroll.scss
@@ -66,7 +66,7 @@
 				width: 100%;
 				height: 25px;
 				background: transparent url('../img/group2151@2x.png') center left no-repeat;
-				background-size: contain;
+				background-size: cover;
 				border: 1px solid #DDDEE0;
 				border-radius: 5px;
 				font-size: 0;
